--- a/projects/theme-manager/src/app/home/home.component.html
+++ b/projects/theme-manager/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<h1>Ceci est notre theme manager</h1>
+<br />
+<a routerLink="/">Home</a>&nbsp;&nbsp;
+<a *ngIf="username=='p1'" routerLink="/todo-list1">Todo List</a>
+<a *ngIf="username=='p2'" routerLink="/todo-list2">Todo List</a>
